--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -87,6 +87,25 @@
   "iconHealth": "Saúde",
   "iconWalking": "Caminhada",
   "iconCycling": "Ciclismo",
+  
+  "@_CATEGORIES": {},
+  "categoryFitness": "Fitness",
+  "categoryBook": "Leitura",
+  "categoryWater": "Hidratação",
+  "categorySleep": "Sono",
+  "categoryRestaurant": "Nutrição",
+  "categoryRun": "Corrida",
+  "categoryMeditation": "Meditação",
+  "categoryYoga": "Yoga",
+  "categoryArt": "Arte",
+  "categoryMusic": "Música",
+  "categoryWork": "Trabalho",
+  "categorySchool": "Estudo",
+  "categoryHeart": "Saúde",
+  "categoryWalk": "Caminhada",
+  "categoryBike": "Ciclismo",
+  "categoryOther": "Outros",
+  
   "selectColor": "Selecionar Cor",
   "chooseColor": "Escolha uma Cor",
   "frequency": "Frequência",
@@ -260,6 +279,22 @@
   "hoursAgo": "{count}h atrás",
   "daysAgo": "{count}d atrás",
   
+  "@_NOTIFICATIONS": {},
+  "notificationTimeFor": "Hora de: {habitTitle}",
+  "notificationHabitStartsSoon": "Seu hábito começa em 30 minutos. Prepare-se! 💪",
+  "notificationSettings": "Configurações de Notificação",
+  "enablePushNotifications": "Notificações Push",
+  "receiveHabitReminders": "Receba lembretes para seus hábitos",
+  "notificationSound": "Som",
+  "followDeviceSettings": "Seguindo configurações do dispositivo",
+  "soundAlwaysOn": "Som sempre ligado",
+  "soundAlwaysOff": "Som sempre desligado",
+  "useManualControl": "Usar controle manual",
+  "useDeviceSettings": "Usar configurações do dispositivo",
+  "vibration": "Vibração",
+  "vibrateOnNotifications": "Vibrar nas notificações",
+  "vibrationDisabled": "Sem vibração",
+
   "@_MISC": {},
   "loading": "Carregando...",
   "error": "Erro",
