--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -120,6 +120,7 @@
   "makeHabitPublic": "Tornar este hábito visível para amigos",
   "letFriendsSeeProgress": "Deixe seus amigos verem seu progresso",
   "changingFrequencyWarning": "Alterar a frequência redefinirá sua sequência e histórico de conclusão.",
+  "cannotChangeCategory": "A categoria não pode ser alterada. Crie um novo hábito para usar uma categoria diferente.",
   "optional": "Opcional",
   "clearTime": "Limpar horário",
   "notificationScheduledTomorrow": "Nota: Notificação agendada para amanhã às {time}",
@@ -360,7 +361,6 @@
   "completed": "Concluído",
   "shareAsImage": "Compartilhar como Imagem",
   "generating": "Gerando...",
-  "createShareCard": "Crie um cartão de compartilhamento bonito",
   "progressReport": "Relatório de Progresso",
   "buildingBetterHabits": "Construindo hábitos melhores",
   "dayStreakLabel": "Sequência\nde Dias",
